\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 2.1.0++}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Handle predictors with missing values  
      using \code{mi} terms. (#27)
      \item Model interactions between the special predictor
      terms \code{mo}, \code{me}, and \code{mi}. (#313)
      \item Allow predictions of measurement-error models
      with new data. (#335)
      \item Fit shifted log-normal models via
      family \code{shifted_lognormal}. (#218)
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Change the parameterization of \code{weibull}
      models to be consistent with other model classes.
      Post-processing of \code{weibull} models fitted with 
      earlier version of \pkg{brms} is no longer possible.
      \item Treat integer responses in \code{ordinal} models 
      as directly indicating categories even if the lowest 
      integer is not one.
      \item Always plot \code{by} variables as facets
      in \code{marginal_smooths}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Allow the \code{:} operator to combine 
      groups in multi-membership terms thanks to
      Gang Chen.
      \item Allow truncation in multivariate models.
    }
  }
}

\section{CHANGES IN VERSION 2.1.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit models on multiple imputed 
      datasets via \code{brm_multiple} thanks 
      to Ruben Arslan. (#27)
      \item Combine multiple \code{brmsfit} objects 
      via function \code{combine_models}.
      \item Compute model averaged posterior 
      predictions with method \code{pp_average}. (#319)
      \item Add new argument \code{ordinal} to
      \code{marginal_effects} to generate special
      plots for ordinal models thanks to the idea 
      of the GitHub user silberzwiebel. (#190)
      \item Use informative inverse-gamma priors
      for length-scale parameters of Gaussian
      processes. (#275)